--- a/client/web/src/search/results/sidebar/SearchAggregations.module.scss
+++ b/client/web/src/search/results/sidebar/SearchAggregations.module.scss
@@ -8,7 +8,7 @@
     min-height: 11.375rem;
     max-height: 11.375rem;
     width: 100%;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
 }
 
 .actions {
